# hmorse

./: README.md  pyproject.toml
hmorse/: __init__.py  __main__.py
